k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: valley-app
  namespace: valley
spec:
  selector:
    app: valley-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
